tests/ui/allow-partial-mitigations/err-allow-partial-mitigations.sp.stderr
error: your program uses the crate `std`, that is not compiled with `stack-protector=all` enabled
  --> $DIR/err-allow-partial-mitigations.rs:14:1
   |
LL | fn main() {}
   | ^
   |
   = note: recompile `std` with `stack-protector=all` enabled, or use `-Z allow-partial-mitigations=stack-protector` to allow creating an artifact that has the mitigation only partially enabled
   = help: it is possible to disable `-Z allow-partial-mitigations=stack-protector` via `-Z deny-partial-mitigations=stack-protector`

error: your program uses the crate `core`, that is not compiled with `stack-protector=all` enabled
  --> $DIR/err-allow-partial-mitigations.rs:14:1
   |
LL | fn main() {}
   | ^
   |
   = note: recompile `core` with `stack-protector=all` enabled, or use `-Z allow-partial-mitigations=stack-protector` to allow creating an artifact that has the mitigation only partially enabled
   = help: it is possible to disable `-Z allow-partial-mitigations=stack-protector` via `-Z deny-partial-mitigations=stack-protector`

error: your program uses the crate `alloc`, that is not compiled with `stack-protector=all` enabled
  --> $DIR/err-allow-partial-mitigations.rs:14:1
   |
LL | fn main() {}
   | ^
   |
   = note: recompile `alloc` with `stack-protector=all` enabled, or use `-Z allow-partial-mitigations=stack-protector` to allow creating an artifact that has the mitigation only partially enabled
   = help: it is possible to disable `-Z allow-partial-mitigations=stack-protector` via `-Z deny-partial-mitigations=stack-protector`

error: your program uses the crate `compiler_builtins`, that is not compiled with `stack-protector=all` enabled
  --> $DIR/err-allow-partial-mitigations.rs:14:1
   |
LL | fn main() {}
   | ^
   |
   = note: recompile `compiler_builtins` with `stack-protector=all` enabled, or use `-Z allow-partial-mitigations=stack-protector` to allow creating an artifact that has the mitigation only partially enabled
   = help: it is possible to disable `-Z allow-partial-mitigations=stack-protector` via `-Z deny-partial-mitigations=stack-protector`

error: your program uses the crate `libc`, that is not compiled with `stack-protector=all` enabled
  --> $DIR/err-allow-partial-mitigations.rs:14:1
   |
LL | fn main() {}
   | ^
   |
   = note: recompile `libc` with `stack-protector=all` enabled, or use `-Z allow-partial-mitigations=stack-protector` to allow creating an artifact that has the mitigation only partially enabled
   = help: it is possible to disable `-Z allow-partial-mitigations=stack-protector` via `-Z deny-partial-mitigations=stack-protector`

error: aborting due to 5 previous errors

